--- a/css/scratch.css
+++ b/css/scratch.css
@@ -56,6 +56,19 @@ iframe{
     padding: 10px;
 }
 
-/* h1{
-    color: white;
-} */
+h1{
+    color: blakc;
+}
+
+
+.top-moments{
+    background-color: whitesmoke;
+    padding: 20px;
+    border: 5px solid black;
+    margin: 30px auto;
+    width: 80%;
+    max-width: 800px;
+    border-radius: 8px;
+    font-family: Arial, sans-serif;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
